# tennis-table

./: .env_example  .flake8  .gitignore  Dockerfile  README.md  alembic.ini  app.py  docker-compose.yaml  pyproject.toml  server.py  startup_commands.sh  temp_start.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 4835115a1e71_database_creation.py
config/: settings.py
dao/: __init__.py  base.py  match.py  player.py
dto/: __init__.py  base.py  match.py  player.py  player_names.py
exceptions/: __init__.py  match_not_found.py  player_names_are_the_same.py
handlers/: __init__.py  base.py  dispatcher.py
handlers/controllers/: __init__.py  base.py  index.py  match_history.py  match_score.py  matches.py  new_match.py
handlers/middlewares/: __init__.py  base.py  logging.py  static_file.py
models/: __init__.py  database.py  match.py  player.py
poetry_scripts/: create_db.py  fill_db.py  run_server.py
services/: matches_history.py
services/match_service/: match_service.py  tennis_game_logic.py
static/css/: base.css  error-page.css  index.css  match-score.css  matches.css  new-match.css  style.css
templates/: error-page.html  index.html  match-score.html  matches.html  new-match.html
templates/layout/: base.html
tennis_app/: app.py
tennis_app/config/: settings.py
tennis_app/dao/: base.py  match.py  player.py
tennis_app/dto/: match.py
tennis_app/exceptions/: __init__.py
tennis_app/handlers/: base.py  dispatcher.py
tennis_app/migrations/: env.py
tennis_app/models/: database.py  match.py
tennis_app/poetry_scripts/: init_db.py  init_db_and_run.py  recreate_db.py  recreate_db_and_run.py  run_server.py  test_fill_db.py
tennis_app/scripts/: run_server.py  test_fill_db.py
tennis_app/services/: __init__.py  matches_history.py
tennis_app/src/: app.py
tennis_app/templates/: error-page.html  index.html  match-score.html  (+2 more)
test/: test_match_service.py  test_tennis_match.py
tests/: test_match_memory_storage_dao.py  test_match_service.py  test_memory_storage.py  test_tennis_match.py  test_tennis_score_logic.py
utils/: __init__.py  uuid.py  uuid_emitter.py
views/: __init__.py  renderer_html.py
(+98 files in other folders)
