[tool.poetry]
name = "tennis-app"
version = "0.1.0"
description = ""
authors = ["Brokiloene <brklvn.minor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.31"
jinja2 = "^3.1.4"
waitress = "^3.0.0"
mysql-connector-python = "^9.0.0"
alembic = "^1.13.2"
python-dotenv = "^1.0.1"
sqlalchemy-utils = "^0.41.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
init_db = "tennis_app.poetry_scripts.init_db:start"
run_server = "tennis_app.poetry_scripts.run_server:start"
init_db_and_run = "tennis_app.poetry_scripts.init_db_and_run:start"
