[tool.poetry]
name = "tennis-app"
version = "0.1.0"
description = ""
authors = ["Brokiloene <brklvn.minor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.31"
jinja2 = "^3.1.4"
waitress = "^3.0.0"
mysql-connector-python = "^9.0.0"
alembic = "^1.13.2"
python-dotenv = "^1.0.1"
sqlalchemy-utils = "^0.41.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test_fill_db = "tennis_app.scripts.test_fill_db:start"
run_server = "tennis_app.scripts.run_server:start"
