[tool.poetry]
name = "tennis-app"
version = "0.1.0"
description = ""
authors = ["Brokiloene <brklvn.minor@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.31"
jinja2 = "^3.1.4"
waitress = "^3.0.0"
mysql-connector-python = "^9.0.0"
alembic = "^1.13.2"
python-dotenv = "^1.0.1"
sqlalchemy-utils = "^0.41.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
pytest = "^8.3.5"
pytest-cov = "^6.0.0"

[tool.mypy]
exclude = "(tennis_app/Local)"

[tool.pytest.ini_options]
pythonpath = ["tennis_app/src"]
testpaths = ["tests"]
markers = ["slow", "db", "test_only_this"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test_fill_db = "tennis_app.scripts.test_fill_db:start"
run_server = "tennis_app.scripts.run_server:start"
